# RedRoverSchool

./: hw_1.py  pyproject.toml
home_works/hw_2/: part_1.py  part_2.py  part_3.py  part_4.py
home_works/hw_3/: hw_4.py  part_1.py  part_2.py  part_3.py  part_5.py
home_works/hw_4/: part_1.py  part_2.py  part_3.py
