[project]
name = "redroverschool"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel",email = "savchukpa@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

